--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -736,6 +736,7 @@ bg:
       logo: "YouVersion: приложение Библията"
       tagline: "започва със <em>100 милиона</em>"
       intro: "Може ли Библията да достигне 100 милиона инсталации преди петата си годишнина на 10 юли? Само с твоята помощ!"
+      after: "Заради теб, Библията достигна 100 милиона инсталации в петата си годишнина на 10 юли. Благодарим!"
       share:
         with friends: "Сподели с приятели"
         fb:
