--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -22,6 +22,7 @@ hi:
   meta:
     100million:
       title: "100 मिलियन से शुभारंभ हुआ। "
+      description: "100 मिलियन से अधिक इन्स्टाल के साथ एक नया कीर्तिमान रचित हुआ। यह मात्र शुरुआत हैं। निशुल्क बाइबिल App आज ही डाउनलोड कर अपने  मित्रों के  साथ शेयर करे। आओ हम साथ मिलकर इतिहास की रचना करे। "
     mobile:
       title: "बाइबिल App"
   now: "अभी "
@@ -527,6 +528,7 @@ hi:
       duplicate: "ट्रैन्ज़ैक्शन आइ डी:यह ट्रैन्ज़ैक्शन आइ डी पहले से रजिस्ट्रीकृत हैं।"
     auth:
       login notice: "YouVersion से क्रय किये गए सामग्री की पुष्टि हेतु अपने अकाउंट में लोग इन कीजिये या <a href='/sign-up?source=licenses'>%{साइनअप}</a>"
+      signup notice: "आपके द्वारा क्रय किए गए सामग्री की प्रमाणीकरण, निशुल्क YouVersion अकाउंट के लिए नीछे साइन अप करे या <a href='/sign-in?source=licenses'>%{login}</a> यदि आपको पहले से अकाउंट हैं। "
       signup link text: "नि:शुल्क अकाउंट हेतु साईन अप करे "
       login link text: "साइन इन "
   registration:
@@ -732,18 +734,24 @@ hi:
   campaigns:
     100m:
       logo: "YouVersion: बाइबिल app"
+      tagline: " <em>100 मिलियन </em> से शुभारंभ"
       intro: "केवल आपकी मदद से हमारी 5th वर्षगांठ 10 जुलाई को बाइबिल App 100 मिलियन इनस्टॉल का आकड़ा छू सकता हैं। "
+      after: " हमारी 5 वी वर्षगाँठ 10 जुलाई तक Bible App ने 100 मिलियन इनस्टॉल का आंकड़ा छू लिया हैं ।यह केवल आपकी मदद और उदारता से ही संभव हो सका । धन्यवाद! "
       share:
         with friends: "मित्रों के साथ शेयर करे "
         fb:
           dialog name: "क्या आपके पास बाइबिल App है?"
+          dialog desc: "मुझे इस बाइबिल App से बेहद प्यार हैं। इसके मदद से  बाइबिल मेरे नित्य जीवन का हिस्सा बन सका। यह मुझे बाइबिल हाईलाइट,बाइबिल ऑडियो सुनने,अध्ययन और विडियो देखने में भी मददगार साबित हुआ। आज ही डाउनलोड करे यह बिल्कुल (निशुल्क) हैं। http://www.bible.com/app"
         tw:
           tweet: " @YouVersion बाइबिल App को मेरे घर के स्क्रीन पर स्थाई स्थान हैं।पढ़े,सुने,देखे या शेयर करे ....सबकुछ निशुल्क app: bible.com/app के संग "
         em:
           subject: "क्या आपके पास बाइबिल App है?"
       body:
         p4: "आइये हम साथ मिलकर इतिहास की रचना करे।"
+        after p1: "YouVersion दुनियाभर के लोगों की साझेदारी हैं,जो प्रभु के वचन अध्ययन में दूसरों की मदद करता हैं। सभी बाइबिल सोसाइटी,बाइबिल प्रकाशक,चर्च,स्वयंसेवक और पादरियों के इस नेक काम में सहभागिता के लिए हम शुक्रगुजार हैं। "
+        after p2: "वर्तमान समय में जिस मात्रा से लोग बाइबिल अध्ययन में लीन हैं ,100 मिलियन का आंकडा छूने की इतिहास रचना, हमे रोमांचित करता हैं। प्रभु की करनी को अपने आँखों से देखना एक अदभुत एहसास हैं ।यह मात्र शुरुआत हैं । <em>100मिलियन </em>."
       ad:
+        title: "यह बाइबिल App निशुल्क हैं,और बाइबिल अध्ययन हेतु उचतम साधन हैं। "
         copy: "पढ़िए,सुनिए,देखिये या शेयर कीजिये। अपने स्मार्टफ़ोन या टेबलेट हेतु बाइबिल App पाए:<a href='http://bible.com/app'>तुरंत डाउनलोड करे</a>"
       sidebar:
         tagline: "आइये एक साथ इतिहास बनाए।"
