--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -739,6 +739,7 @@ mk:
       logo: "YouVersion: апликација „Библија“"
       tagline: "Започнува со <em>100 милиони</em>"
       intro: "Дали може апликацијата Библија да достигне 100 милиони преземања пред нашата 5 годишнина на 10 Јули? Само со ваша помош!"
+      after: "Благодарение на вас, апликацијата „Библија“ достигна 100 милиони преземања пред нашиот 5-годишен јубилеј на 10 јули. Ви благодариме!"
       share:
         with friends: "Споделете со вашите пријатели"
         fb:
@@ -754,6 +755,8 @@ mk:
         p2: "И знаеш што? Со твоја помош, близу е денот кога апликацијата „Библија“ ќе достигне 100 милиони преземања."
         p3: "Научивме дека Господ користи вакви моменти да поттикне уште поголем развој."
         p4: "Ајде да ја создаваме историјата заедно."
+        after p1: "YouVersion претставува глобална коалиција на луѓе кои имаат жар да им помагаат на други луѓе да се запознаат и  ангажираат со читање на Божјиот збор - Светото писмо. Срдечно им благодариме на сите Библиски здруженија и христијански издавачки куќи, цркви, пастори и волонтери, за нивната великодушност и дарежливост!"
+        after p2: "Она што е највозбудливо за овој важен настан е следново: денес огромен број на луѓе имаат интеракција со Библијата; никогаш досега не сме биле сведоци на толкав број на луѓе. Воодушевувачки е да се види тоа што Бог го прави. Ние веруваме дека ова е само почетокот.  <em>Започнува со 100 милиони</em>."
       ad:
         title: "Апликацијата „Библија“ е целосно бесплатна и претставува одличен начин да се истражи Библијата."
         copy: "Читај, слушај, гледај, сподели. Преземи ја апликацијата „Библија“ на твојот смартфон или таблет: <a href='http://bible.com/app'>Преземи сега</a>"
