--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -739,6 +739,7 @@ en-GB:
       logo: "YouVersion: The Bible app"
       tagline: "It starts with <em>100 million</em>"
       intro: "Can the Bible App reach 100 million installs before our 5th anniversary on 10th July? Only with your help!"
+      after: "Because of you, the Bible App reached 100 million installs by our 5th anniversary on 10th July. Thank you!"
       share:
         with friends: "Share with your friends"
         fb:
@@ -754,6 +755,8 @@ en-GB:
         p2: "But even bigger? With your help, it’s the day the Bible App will reach 100 million downloads."
         p3: "We’ve learned God uses milestones like this to fuel even greater growth."
         p4: "Let’s make history together."
+        after p1: "YouVersion represents a global coalition of people passionate about helping others engage with God’s Word. To all of the Bible societies and Bible publishers, churches, pastors, and volunteers: thank you for your generosity!"
+        after p2: "What’s most exciting about this milestone is what it represents: today people are interacting with the Bible on a scale we’ve never witnessed before. It’s awe-inspiring to see what God is doing. And we believe this is just the beginning. <em>It starts with 100 million</em>."
       ad:
         title: "The Bible App is completely free and a great way to explore the Bible."
         copy: "Read, listen, watch, share. Get the Bible App for your smartphone or tablet: <a href='http://bible.com/app'>Download now</a>"
