--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -22,7 +22,7 @@ zh-TW:
   meta:
     100million:
       title: "從1億開始"
-      description: "聖經軟體的安裝量幾乎達到1億次，這真是一個不可思議的裡程碑！但是我們才剛剛開始。下載免費的聖經軟體，然后與朋友們分享這個軟體，讓我們一起開創歷史。"
+      description: "聖經軟體的安裝量幾乎達到1億次，這真是一個不可思議的里程碑！但是我們才剛剛開始。下載免費的聖經軟體，然后與朋友們分享這個軟體，讓我們一起開創歷史。"
     mobile:
       title: "聖經軟體"
       description: "數以千萬的人們透過聖經軟體來閱讀、看視訊、聽音訊或分享經文上帝的話語。請下載這個免費軟體然後隨時隨地存取您的書籤、筆記和讀經計劃。享受使用上百個聖經譯本，包括語音版，全部都在您的行動設備裡。"
@@ -739,6 +739,7 @@ zh-TW:
       logo: "YouVersion：聖經軟體"
       tagline: "從<em>1億</em>開始"
       intro: "聖經軟體能否在7月10日5週年前達到一億個安裝的里程碑嗎？全靠您的幫助！"
+      after: "因為您的參與，聖經軟體在7月10日5週年時達到了一億個安裝的里程碑。謝謝您！"
       share:
         with friends: "和您的朋友分享"
         fb:
@@ -754,8 +755,10 @@ zh-TW:
         p2: "您敢想像嗎？您再給力一下，這一天也將成為聖經軟體達到1億次下載量的重要紀念日！"
         p3: "我們知道到神利用好像這一個的里程碑去推動更大增長。"
         p4: "讓我們一同來創造歷史!"
+        after p1: "YouVersion 代表了世界各地熱衷於幫助他人了解神的話語的人們。我們在此感謝所有的聖經協會、聖經出版商、教會、牧師並志願者們的慷慨付出！"
+        after p2: "這個里程碑更讓人興奮的是其背后的意義：今天的人們正在以超乎我們所見所想的規模來閱讀聖經。上帝的作為真是令人振奮！我們相信這僅僅是個開始。<em> 從1億開始</em>"
       ad:
-        title: "聖經軟體完全免費，是一款非常棒的幫助探索聖言的工具。"
+        title: "聖經軟體是一款完全免費與超棒的探索聖言工具。"
         copy: "閱讀、看視訊、聽音訊或分享經文。下載聖經軟體到你的智能電話或平板電腦：<a href='http://bible.com/app'>即時下載</a>"
       sidebar:
         tagline: "讓我們一同創造歷史"
