--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,21 @@
 ---
 en:
   social:
-    email:                                      "Email"
-    twitter:                                    "Twitter"
-    facebook:                                   "Facebook"
+    my connections:                             "Connected Accounts"
+    connected as:                               "You are connected to %{connection} as %{username}."
+    remove connection:                          "Remove"
+    connection friends:                         "Here are some YouVersion users you're connected to on %{connection}:"
+    errors:
+      no friends:                               "None of your %{connection} friends appear to be on YouVersion yet."
+      reset connection:                         "Sorry, an error has occurred. Please remove and then reconnect this connection."
+    email:
+      name:                                     "Email"
+    twitter:
+      name:                                     "Twitter"
+    facebook:
+      name:                                     "Facebook"
+      errors:
+        expired access:                         "Your access token has been expired by Facebook.  Please remove your connection and reconnect to Facebook."
   api:
     users agree bool:                           "You must agree to the terms and conditions to create an account."
     users confirm password matches:             "The new passwords do not match."
@@ -27,6 +39,9 @@ en:
     mobile:
       title:                                    "The Bible App"
       description:                              "Tens of millions of people are using the Bible App to read, listen to, watch and share God's Word, making it a part of their daily lives. Download the free app and access your bookmarks, notes, and reading plans from anywhere. Enjoy hundreds of versions, including audio, all on your mobile device."
+    connections:
+      index:
+        title:                                  "Connected Accounts"
   now:                                          "Now"
   celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Link"
@@ -43,8 +58,6 @@ en:
   copy:                                         "Copy"
   copy confirmed:                               "Copied!"
   new note:                                     "Create a Note"
-  twitter:                                      "Twitter"
-  facebook:                                     "Facebook"
   share success:                                "Your message has been shared."
   share error:                                  "Sorry, there was an error sharing your message. Please try again."
   google plus:                                  "Google +"
